--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
   "name": "after-effects",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "description": "Send instructions to the After Effects scripting environment from node.js.",
   "main": "index.js",
   "scripts": {
-    "test": "node lib/test.js",
-    "minify": "node lib/minify.js"
+    "test": "node lib/test.js"
   },
   "keywords": [
     "after",
     "effects"
   ],
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/BenGaumond/after-effects"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BenGaumond/after-effects"
   },
   "author": "Ben Gaumond",
   "license": "ISC",
   "dependencies": {
-    "applescript": "^1.0.0",
     "babel-core": "^6.4.5",
     "babel-preset-es2015": "^6.3.13",
     "is-explicit": "^1.0.1",
-    "jsesc": "^1.0.0",
-    "q": "^1.4.1",
+    "jsesc": "^1.2.0",
     "uglify-js": "^2.6.2",
     "uuid": "^2.0.1"
   }
