--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.4.5",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
+    "babel-plugin-transform-es3-property-literals": "^6.8.0",
+    "babel-plugin-transform-es5-property-mutators": "^6.8.0",
     "babel-preset-es2015": "^6.3.13",
     "is-explicit": "^1.0.1",
     "jsesc": "^1.2.0",
