--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,9 @@
     "parserOptions": {
         "sourceType": "module"
     },
+    "globals": {
+      "is": false
+    },
     "rules": {
         "no-var": "error",
         "no-extra-parens": "warn",
