--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "after-effects",
-  "version": "0.4.10",
+  "version": "0.4.11",
   "description": "Send instructions to the After Effects scripting environment from node.js.",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "keywords": [
     "after",
     "effects"
@@ -21,7 +20,7 @@
     "babel-plugin-transform-es3-property-literals": "^6.8.0",
     "babel-plugin-transform-es5-property-mutators": "^6.8.0",
     "babel-preset-es2015": "^6.3.13",
-    "is-explicit": "^1.0.6",
+    "is-explicit": "^1.1.0",
     "jsesc": "^1.2.0",
     "uglify-js": "^2.6.2",
     "uuid": "^2.0.1"
