--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "babel-plugin-transform-es3-property-literals": "^6.8.0",
     "babel-plugin-transform-es5-property-mutators": "^6.8.0",
     "babel-preset-es2015": "^6.3.13",
-    "is-explicit": "^1.0.1",
+    "is-explicit": "^1.1.0",
     "jsesc": "^1.2.0",
-    "uglify-js": "^2.6.2",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "is-valid-path": "^0.1.1"
   },
   "devDependencies": {
     "babel-preset-es2015-node": "^6.1.1",
