--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,31 +1,21 @@
 {
-    "env": {
-        "es6": true,
-        "node": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "sourceType": "module"
-    },
-    "rules": {
-        "no-var": "error",
-        "prefer-const": "error",
-        "no-extra-parens": "warn",
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "never"
-        ]
-    }
+  "env": {
+    "node": true,
+    "es6": true
+  },
+  "extends": "standard",
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-var": "error",
+    "prefer-const": "error",
+    "padded-blocks": "off",
+    "curly": ["error", "multi"]
+  },
+  "globals": {
+    "log": false,
+    "is": false
+  }
 }
