--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Send instructions to the After Effects scripting environment from node.js.",
   "main": "/lib",
   "scripts": {
-    "test": "mocha --compilers js:babel-register"
+    "test": "mocha --compilers js:babel-register",
+    "build": "rm -rf lib; mkdir lib; ./node_modules/.bin/babel src --out-dir lib",
+    "build:dev": "npm run build -- --watch",
+    "prepublishOnly": "npm run build",
+    "postinstall": "npm run build && rm -rf src"
   },
   "keywords": [
     "after",
@@ -17,18 +21,29 @@
   "author": "Ben Gaumond",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.14.0",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
-    "babel-plugin-transform-es3-property-literals": "^6.8.0",
-    "babel-plugin-transform-es5-property-mutators": "^6.8.0",
-    "babel-preset-es2015": "^6.3.13",
-    "is-explicit": "^1.1.0",
-    "uuid": "^2.0.1",
+    "babel-core": "^6.25.0",
+    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
+    "babel-plugin-transform-es3-property-literals": "^6.22.0",
+    "babel-plugin-transform-es5-property-mutators": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "is-explicit": "^1.2.2",
+    "uuid": "^3.1.0",
     "is-valid-path": "^0.1.1",
-    "jsesc": "^2.2.0"
+    "jsesc": "^2.5.1"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^3.0.2"
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "chai": "^4.1.0",
+    "eslint": "^4.1.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-node": "^5.1.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^3.4.2"
   }
 }
