--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "babel-plugin-transform-es5-property-mutators": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "is-explicit": "^1.2.2",
-    "uuid": "^3.1.0",
     "is-valid-path": "^0.1.1",
-    "jsesc": "^2.5.1"
+    "jsesc": "^2.5.1",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
