--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Send instructions to the After Effects scripting environment from node.js.",
   "main": "/lib",
   "scripts": {
-    "test": "mocha --compilers js:babel-register",
+    "test": "mocha --require babel-register --require babel-polyfill 'test/**/*test.js'",
+    "test:watch": "mocha --require babel-register --watch --require babel-polyfill 'test/**/*test.js'",
     "build": "rm -rf lib; mkdir lib; ./node_modules/.bin/babel src --out-dir lib",
     "build:dev": "npm run build -- --watch",
     "prepublishOnly": "npm run build",
@@ -36,6 +37,7 @@
     "babel-eslint": "^7.2.3",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "chai": "^4.1.0",
     "eslint": "^4.1.1",
