--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-plugin-transform-es5-property-mutators": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "fs-extra": "^4.0.0",
     "is-explicit": "^1.2.2",
     "is-valid-path": "^0.1.1",
     "jsesc": "^2.5.1",
