Moved readSync to fs-util
Where it should be anyway
Also updated the readme. It should be good enough for -alpha.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "after-effects",
-  "version": "0.5.0",
+  "version": "1.0.0-alpha.1",
   "description": "Send instructions to the After Effects scripting environment from node.js.",
   "main": "/lib",
   "scripts": {
