--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "babel-plugin-transform-es3-property-literals": "^6.8.0",
     "babel-plugin-transform-es5-property-mutators": "^6.8.0",
     "babel-preset-es2015": "^6.3.13",
+    "escape-string-applescript": "^2.0.0",
     "is-explicit": "^1.2.2",
-    "jsesc": "^1.2.0",
     "uglify-js": "^2.6.2",
     "uuid": "^2.0.1"
   }
