support for : noui, multi  | fixed : // @ts-ignore conflict
added option for noui and multi for windows edition.using //@ts-ignore create problem on created jsx files. This fixed by adding cleanCommand function.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch via NPM",
+            "name": "Test",
             "runtimeExecutable": "npm",
             "runtimeArgs": [
                 "run",
