--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Send instructions to the After Effects scripting environment from node.js. ",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/jasmine-ts " ,
-    "build:AEHelpers" : "node_modules/.bin/ts-node lib/includes/AEHelper.ts" ,
-    "compile:AEHelpers" : "node_modules/.bin/tsc lib/includes/AEHelper.ts "
-    ,"build" : "npm run compile:AEHelpers &   npm run build:AEHelpers && npm pack"
+    "test": "node_modules/.bin/jasmine-ts ",
+    "build:AEHelpers": "node src/AEHelper.js",
+    "compile:AEHelpers": "node_modules/.bin/tsc src/AEHelper.ts ",
+    "build": "npm run compile:AEHelpers &   npm run build:AEHelpers && npm pack"
   },
   "keywords": [
     "after",
@@ -16,7 +16,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/BenZed/after-effects"
-  }, 
+  },
   "author": "Ben Gaumond",
   "license": "ISC",
   "dependencies": {
