--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
     // "sourceMap": true,                     /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
-    // "outDir": "./temp",                        /* Redirect output structure to the directory. */
+     "outDir": "./out",                        /* Redirect output structure to the directory. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "incremental": true,                   /* Enable incremental compilation */
@@ -23,24 +23,24 @@
     // "isolatedModules": true,               /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
 
     /* Strict Type-Checking Options */
-    "strict": true,                           /* Enable all strict type-checking options. */
-    // "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
-    // "strictNullChecks": true,              /* Enable strict null checks. */
-    // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
-    // "strictBindCallApply": true,           /* Enable strict 'bind', 'call', and 'apply' methods on functions. */
-    // "strictPropertyInitialization": true,  /* Enable strict checking of property initialization in classes. */
-    // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
-    // "alwaysStrict": true,                  /* Parse in strict mode and emit "use strict" for each source file. */
+    "strict": false,                           /* Enable all strict type-checking options. */
+      "noImplicitAny": false,                 /* Raise error on expressions and declarations with an implied 'any' type. */
+     "strictNullChecks": false,              /* Enable strict null checks. */
+     "strictFunctionTypes": false,           /* Enable strict checking of function types. */
+     "strictBindCallApply":false,           /* Enable strict 'bind', 'call', and 'apply' methods on functions. */
+     "strictPropertyInitialization": false,  /* Enable strict checking of property initialization in classes. */
+     "noImplicitThis": false,                /* Raise error on 'this' expressions with an implied 'any' type. */
+     "alwaysStrict": false,                  /* Parse in strict mode and emit "use strict" for each source file. */
 
     /* Additional Checks */
-    // "noUnusedLocals": true,                /* Report errors on unused locals. */
-    // "noUnusedParameters": true,            /* Report errors on unused parameters. */
-    // "noImplicitReturns": true,             /* Report error when not all code paths in function return a value. */
-    // "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
+     "noUnusedLocals": false,                /* Report errors on unused locals. */
+     "noUnusedParameters": false,            /* Report errors on unused parameters. */
+     "noImplicitReturns": false,             /* Report error when not all code paths in function return a value. */
+     "noFallthroughCasesInSwitch": false,    /* Report errors for fallthrough cases in switch statement. */
 
     /* Module Resolution Options */
     //  "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-     "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
+   // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
     // "paths": {"l},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
@@ -58,5 +58,7 @@
     /* Experimental Options */
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
-  }
+  } , 
+  "include" : ["src/helpers/*"] , 
+  "exclude": [ "src/helpers/Interfaces/*"]
 }
