new helper functions added

--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "after-effects",
-  "version": "1.0.1a10",
+  "version": "1.0.1a19",
   "description": "Send instructions to the After Effects scripting environment from node.js. ",
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/jasmine-ts ",
-    "b::AEHelper": "node src/Helpers/AEHelper.js",
-    "b::IOHelper": "node src/Helpers/IOHelper.js",
-    "b::CompHelper": "node src/Helpers/CompHelper.js",
-    "c::AEHelper": "node_modules/.bin/tsc --p  .  src/helpers/AEHelper.ts",
-    "c::IOHelper": "node_modules/.bin/tsc src/helpers/IOHelper.ts",
-    "c::CompHelper" : "node_modules/.bin/tsc src/helpers/CompHelper.ts " , 
-    "c_" :"c::AEHelper &  c::IOHelper & c::CompHelper ",
-    "b_" : "b::AEHelper &  b::IOHelper & b::CompHelper ",
-    "build": "npm run c_ & npm run b_ && npm pack"
+    "b::AEHelper": "node src/helpers/ProjectHelperJSX.js",
+    "b::IOHelper": "node src/helpers/IOHelperJSX.js",
+    "b::CompHelper": "node src/helpers/CompHelperJSX.js",
+    "compile": "node_modules/.bin/tsc",
+    "buildjsx": "node_modules/.bin/npm-run-all   b::*",
+    "prebuild": "node_modules/.bin/rimraf lib/includes/helpers/*.jsx",
+    "build": "npm run compile  & npm run buildjsx ",
+    "package": "npm run  build    &  npm pack"
   },
   "keywords": [
     "after",
@@ -44,6 +43,8 @@
     "chai": "^4.2.0",
     "jasmine": "^3.5.0",
     "jasmine-ts": "^0.3.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   }
