--- a/package.json
+++ b/package.json
@@ -1,15 +1,9 @@
 {
   "name": "after-effects",
-  "version": "1.0.0-alpha.8",
+  "version": "1.0.0",
   "description": "Send instructions to the After Effects scripting environment from node.js.",
   "main": "lib/index.js",
-  "scripts": {
-    "test": "shx mocha --require babel-register --require babel-polyfill 'test/**/*test.js'",
-    "test:watch": "shx mocha --require babel-register --watch --require babel-polyfill 'test/**/*test.js'",
-    "build": "shx rm -rf lib && babel src --out-dir lib",
-    "build:dev": "npm run build -- --watch",
-    "prepublishOnly": "npm run build"
-  },
+  "scripts": {},
   "keywords": [
     "after",
     "effects"
@@ -34,20 +28,10 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-transform-function-bind": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "chai": "^4.1.0",
-    "eslint": "^4.1.1",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-node": "^5.1.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "mocha": "^3.4.2",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
+    "eslint": "^6.8.0",
+    "typescript": "^3.7.4",
     "shx": "^0.2.2"
   }
 }
