--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "after-effects",
-  "version": "1.0.1a25",
+  "version": "1.0.2",
   "description": "Send instructions to the After Effects scripting environment from node.js. ",
   "main": "index.js",
   "scripts": {
