--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "after-effects",
-  "version": "1.1.11",
+  "version": "1.1.12",
   "description": "Send instructions to the After Effects scripting environment from node.js. ",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/jasmine-ts ",
+    "test": "node_modules/.bin/jasmine-ts "
     
-    "compile": "node_modules/.bin/tsc"
+   
      
     
   },
