--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "after-effects",
-  "version": "1.1.17",
+  "version": "1.1.0.alpha.1",
   "description": "Send instructions to the After Effects scripting environment from node.js. ",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/jasmine-ts "
-    
-   
-     
-    
+    "test": "node_modules/.bin/jasmine-ts"
   },
   "keywords": [
     "after",
