added reactive style observable execution

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,11 @@
         "--require",
         "ts-node/register"
         
-    ]
+    ],
+    "mocha.requires": [
+        "ts-node/register"
+       ],
+    "mocha.logVerbose" :  true ,
+    "mocha.files.glob" : "test/**/*.ts"
  
 }
