--- a/package.json
+++ b/package.json
@@ -17,28 +17,29 @@
   "author": "Ben Gaumond",
   "license": "ISC",
   "dependencies": {
-    "@types/chai-arrays": "^1.0.3",
+    
     "babel-core": "^6.4.5",
     "babel-plugin-transform-es3-member-expression-literals": "^6.8.0",
     "babel-plugin-transform-es3-property-literals": "^6.8.0",
     "babel-plugin-transform-es5-property-mutators": "^6.8.0",
     "babel-preset-es2015": "^6.3.13",
-    "chai-arrays": "^2.0.0",
+    
     "escape-string-applescript": "^2.0.0",
     "is-explicit": "^1.2.2",
     "nyc": "^15.0.1",
-   
-    "uglify-js": "^2.6.2"
+    "uglify-js": "^2.6.2",
+    "types-for-adobe": "^6.0.1"
   },
   "devDependencies": {
-    "types-for-adobe": "https://github.com/corluk/Types-for-Adobe.git",
     "@types/chai": "^4.2.5",
     "@types/mocha": "^7.0.2",
     "@types/node": "^12.12.12",
+    "@types/chai-arrays": "^1.0.3",
     "@types/uuid": "^7.0.3",
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
     "ts-node": "^8.5.2",
+    
     "typescript": "^3.7.2",
     "uuid": "^2.0.3"
   }
