--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-  "name": "after-effects",
-  "version": "1.0.0",
-  "description": "Send instructions to the After Effects scripting environment from node.js.",
-  "main": "lib/index.js",
-  "scripts": {},
-  "keywords": [
-    "after",
-    "effects"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/BenZed/after-effects"
-  },
-  "author": "Ben Gaumond",
-  "license": "ISC",
-  "dependencies": {
-    "@types/jsesc": "^3.0.1",
-    "babel-core": "^6.25.0",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
-    "babel-plugin-transform-es3-property-literals": "^6.22.0",
-    "babel-plugin-transform-es5-property-mutators": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "extendscript-es5-shim": "^0.1.3",
-    "is-explicit": "^1.2.2",
-    "is-valid-path": "^0.1.1",
-    "jsesc": "^2.5.1",
-    "uuid": "^3.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "^16.9.0",
-    "@types/babel-core": "^6.25.7",
-    "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
-    "eslint": "^6.8.0",
-    "shx": "^0.2.2",
-    "typescript": "^3.7.4"
-  }
+    "name": "after-effects",
+    "version": "1.0.0",
+    "description": "Send instructions to the After Effects scripting environment from node.js.",
+    "main": "lib/index.js",
+    "scripts": {
+        "link-benzed": "ts-node ./scripts/link-benzed.ts",
+        "postinstall": "npm run link-benzed"
+    },
+    "keywords": [
+        "after",
+        "effects"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/BenZed/after-effects"
+    },
+    "author": "Ben Gaumond",
+    "license": "ISC",
+    "dependencies": {
+        "@types/jsesc": "^3.0.1",
+        "babel-core": "^6.25.0",
+        "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
+        "babel-plugin-transform-es3-property-literals": "^6.22.0",
+        "babel-plugin-transform-es5-property-mutators": "^6.24.1",
+        "babel-preset-es2015": "^6.24.1",
+        "extendscript-es5-shim": "^0.1.3",
+        "is-valid-path": "^0.1.1",
+        "jsesc": "^2.5.1",
+        "uuid": "^3.1.0"
+    },
+    "devDependencies": {
+        "@types/babel-core": "^6.25.7",
+        "@types/is-valid-path": "^0.1.0",
+        "@types/node": "^16.9.0",
+        "@types/uuid": "^8.3.1",
+        "@typescript-eslint/eslint-plugin": "^2.16.0",
+        "@typescript-eslint/parser": "^2.16.0",
+        "eslint": "^6.8.0",
+        "shx": "^0.2.2",
+        "ts-node": "^10.2.1",
+        "typescript": "^3.7.4"
+    }
 }
