--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "eslint": "^7.32.0",
         "shx": "^0.3.3",
         "ts-node": "^10.2.1",
+        "types-for-adobe": "^6.0.1",
         "typescript": "^4.4.2"
     }
 }
